--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,76 @@
-#task-container {
-    background-color: aqua;
+body {
+    background-color: #ebefee;
+    margin: 0;
+    font-family: 'Oxygen', sans-serif;
+}
+
+#intro {
+    position: relative;
+    left: 50px;
+    top: 150px;
+}
+
+#html-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+table {
+    width: 30vw;
+    border-collapse: collapse;
+    margin-bottom: 20%;
+}
+
+th, td {
+    padding: 12px;
+    text-align: left;
+    border-bottom: 1px solid #dee2e6;
+}
+
+button {
+    padding:  10px 20px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 8px;
+}
+
+#login-popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: #ffffff;
+    border: 1px solid #dee2e6;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+input, textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+}
+
+#username-display {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+#task-list {
+    background-color: transparent;
+}
+
+td, th {
+    text-align: center;
+}
+
+
+@media (max-width: 768px) {
+    table {
+        display: block;
+        overflow-x: auto;
+    }
 }
