--- a/public/main.css
+++ b/public/main.css
@@ -1,7 +1,29 @@
 body {
-    background-color: #ebefee;
+    background-color: #ecfbf6;
     margin: 0;
-    font-family: 'Oxygen', sans-serif;
+    font-family: 'Marcellus', sans-serif;
+}
+
+
+main {
+    display: flex;
+    justify-content: center;
+}
+
+h1 {
+    font-family: "Marcellus", sans-serif;
+    font-weight: bolder;
+    font-size: 50px;
+    margin: 0;
+    color: #e1b074;
+}
+
+p {
+    color: black;
+}
+
+label {
+    color: #4e6260;
 }
 
 #intro {
@@ -12,21 +34,36 @@ body {
 
 #html-container {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 30px;
+    left: 250px;
+    margin: 0;
 }
 
+
+
 table {
-    width: 30vw;
+    position: relative;
+    background-color: transparent;
+    width: 100%;
+    border: 5px solid #bcbcbc;
+    border-radius: 20px;
     border-collapse: collapse;
-    margin-bottom: 20%;
+    border-radius: 20px;
+    overflow-y: auto;
+    left: -160px;
+    top: 40px;
+    color: #2f4442;
+    text-wrap: wrap;
 }
 
 th, td {
     padding: 12px;
     text-align: left;
-    border-bottom: 1px solid #dee2e6;
+    border: .5px solid #dee2e6;
+    
 }
+
+
 
 button {
     padding:  10px 20px;
@@ -34,6 +71,14 @@ button {
     border: none;
     cursor: pointer;
     border-radius: 8px;
+    color: #dee2e6;
+    background-color: #4e6260;
+}
+
+.delete-btn, .edit-button {
+    background-color: #4e6260;
+    color: #dee2e6;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 #login-popup {
@@ -43,15 +88,40 @@ button {
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 20px;
-    background-color: #ffffff;
-    border: 1px solid #dee2e6;
+    border: none;
+    border-radius: 20px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-input, textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
+input[type="checkbox"] {
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #dee2e6;
+    border-radius: 5px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+
+input[type="checkbox"]:checked {
+    background-color: #2f4442;
+}
+
+#task-container {
+    display: flex;
+    width: 100%
+}
+
+#input-container {
+    padding-top: 25px;
+    margin-left: -50px;
+}
+
+
+#task-input, #description-input {
+    width: 32%;
+    padding: 5px;
+    
 }
 
 #username-display {
